# bassinet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: dataset.hpp  initialisation.hpp  layer.hpp  loss.hpp  optimiser.hpp  tensor.hpp
src/: dataset.cpp  initialisation.cpp  layer.cpp  loss.cpp  optimiser.cpp  tensor.cpp
test/: linear_it.cpp  loss_test.cpp  optimiser_test.cpp  tensor_test.cpp
